<resources>
    <string name="app_name">mCerebrum</string>
    <string name="app_description">PhoneSensor app reads sensor data of the phone and push them to DataKit</string>
    <string name="action_settings">Settings</string>
    <string name="table_sensor_id">sensor</string>
    <string name="table_header_count">count</string>
    <string name="table_header_freq">freq.</string>
    <string name="table_header_samples">samples</string>
    <string name="url_release">https://github.com/MD2Korg/mCerebrum-DataKit/releases</string>
    <string name="url_sourcecode">https://github.com/MD2Korg/mCerebrum-DataKit/</string>
    <string name="settings">Settings</string>
    <string name="title_privacy">Privacy</string>
    <string name="inactive">Inactive</string>
    <string name="configure">Configure</string>
    <string name="privacy_status">Status:</string>
    <string name="privacy_option">Deactivated:</string>

    <string name="title_cerebralcortex">Cerebral Cortex</string>
    <string name="cerebralcortex_status">Status:</string>
    <string name="toggle">Toggle</string>
    <string name="button_close">Close</string>
    <string name="button_save">Save</string>
</resources>
