<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".ActivityMain">

    <include layout="@layout/layout_status" />

    <LinearLayout
        android:id="@+id/ll_privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="?attr/text_view_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_privacy" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2"
                        android:text="@string/privacy_status"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewPrivacyStatus"
                        style="?attr/text_view_primary_color"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.8"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:id="@+id/textViewPrivacyOptionTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2"
                        android:text="@string/privacy_option"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewPrivacyOption"
                        style="?attr/text_view_primary_color"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.8" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/button_privacy"
                style="?attr/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/configure" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_cerebralcortex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.52"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="?attr/text_view_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_cerebralcortex" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3.92"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2"
                        android:text="@string/cerebralcortex_status"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewcerebralcortexStatus"
                        style="?attr/text_view_primary_color"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.8"
                        android:textStyle="bold" />
                </LinearLayout>



            </LinearLayout>

            <Button
                android:id="@+id/button_cerebralcortex"
                style="?attr/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/toggle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/textViewcerebralcortexMessage"
                android:layout_width="match_parent"
                android:layout_height="75dip"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>